fixing letter spacing

--- a/8bs-blog.css
+++ b/8bs-blog.css
@@ -35,7 +35,6 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 6vmax;
     padding-top: 0px;
     margin-top: 0px;
-    letter-spacing: 2px;
     margin-bottom: 0px;
 }
 
